force-app/main/default/objects/ProjectSupporter__c/ProjectSupporter__c.object-meta.xml
<CustomObject>
    <label>Project Supporter</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Project Supporter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Supporters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>