force-app/main/default/objects/ProjectSupporter__c/fields/ProjectFacilitator__c.field-meta.xml
<CustomField>
    <fullName>ProjectFacilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Facilitator</label>
    <referenceTo>ProjectFacilitator__c</referenceTo>
    <relationshipLabel>Project Supporters</relationshipLabel>
    <relationshipName>Project_Supporters</relationshipName>
    <type>Lookup</type>
</CustomField>