force-app/main/default/objects/ProjectSupporter__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Project Supporters</relationshipLabel>
    <relationshipName>Project_Supporters</relationshipName>
    <type>Lookup</type>
</CustomField>