force-app/main/default/objects/ProjectSupporter__c/fields/SupportType__c.field-meta.xml
<CustomField>
    <fullName>SupportType__c</fullName>
    <formula>TEXT(ProjectFacilitator__r.Type__c)</formula>
    <label>Support Type</label>
    <type>Text</type>
</CustomField>